# focus

./: .env.example  .focus.toml.example  .gitignore  Focus.code-workspace  LICENSE  README.md  pyproject.toml
.cursor/rules/: README.md  focus-agent-gates.mdc  focus-engineering.mdc  focus-explanation-voice.mdc  focus-project-status.mdc  focus-project.mdc
.github/workflows/: focus.yml  publish.yml
docs/: ACTION.md  DECISIONS.md  DEMO.md  ETHICS.md  HUD.md  LAUNCH.md  PRIVACY.md  PUBLISH.md  ROADMAP.md  STACK.md  TESTING.md  TRIGGERS.md
docs/examples/: focus-hud-classify.md  focus-hud-glass-box-js.md  focus-hud-glass-box.md
examples/: focus-action.yml
extensions/vscode-focus/: README.md  package-lock.json  package.json
extensions/vscode-focus/src/: codeLens.ts  diffEditor.ts  explainText.ts  extension.ts  focusCli.ts  gutter.ts  hudPanel.ts  icons.ts  inlineExplanation.ts  lensFont.ts  symbolLayout.ts  types.ts
scripts/: dev-extension.sh  install-extension.sh
src/focus/: __init__.py  audit.py  cli.py  config.py  models.py
src/focus/ci/: __init__.py  github_comment.py
src/focus/graph/: __init__.py  builder.py
src/focus/hud/: __init__.py  build.py  classify.py  edit_facts.py  explain.py  explain_render.py  mermaid.py  render.py
src/focus/ingest/: __init__.py  diff.py  overlay.py  symbols.py
src/focus/llm/: __init__.py  cache.py  clients.py  labeler.py  pack.py  settings.py  validate.py  weak.py
src/focus/scan/: __init__.py  cache.py  js_parser.py  parser.py  walker.py
src/focus/triggers/: __init__.py  rules.py
tests/: conftest.py  test_audit.py  test_ci_comment.py  test_cli.py  test_config_symbols.py  test_diff_range.py  test_edit_facts.py  test_explain.py  test_explain_cli.py  test_graph.py  test_hud_golden.py  test_ingest.py  test_js_ts.py  test_llm_cache.py  test_llm_labeler.py  test_orphan_lines.py  test_overlay.py  test_parse_cache.py  test_parser.py  test_scan.py
tests/fixtures/glass_box/: auth_utils.py
tests/fixtures/glass_box/api/: routes.py
tests/fixtures/glass_box/billing/: service.py
tests/fixtures/glass_box/dashboard/: views.py
tests/fixtures/glass_box/jobs/: worker.py
tests/fixtures/glass_box_js/: authUtils.ts
tests/fixtures/glass_box_js/api/: routes.ts
tests/fixtures/glass_box_js/billing/: service.ts
tests/fixtures/glass_box_js/dashboard/: views.ts
tests/fixtures/glass_box_js/jobs/: worker.ts
