[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focus"
version = "0.0.1"
description = "Architectural diagnostic engine — blast radius before merge."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "tree-sitter>=0.26.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.26",
]

[project.scripts]
focus = "focus.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/focus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
