[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focus-hud"
version = "0.2.0"
description = "Blast radius you can defend — evidence-only, before you merge."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Joviane Bellegarde" }]
keywords = ["blast-radius", "architecture", "code-review", "mermaid", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "tree-sitter>=0.26.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.26",
]

[project.urls]
Homepage = "https://github.com/j0viane/focus"
Repository = "https://github.com/j0viane/focus"
Issues = "https://github.com/j0viane/focus/issues"
Documentation = "https://github.com/j0viane/focus/blob/main/docs/DEMO.md"

[project.scripts]
focus = "focus.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/focus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
